@startuml Diagramme_De_Classes_Gestion_Administrative

' ==============================================================================
' Figure 12 : Diagramme de classes – Gestion administrative (DoyaImmo)
' ==============================================================================

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #2B6CB0
    HeaderBackgroundColor #EBF4FF
    ArrowColor #2D3748
    FontName Arial
}

package "Module Gestion Administrative & Modération" {

    class Administrateur {
        - id : bigint
        - user_id : bigint
        - fonction : string
        + user()
        + validations()
    }

    class Agence {
        - id : bigint
        - user_id : bigint
        - nom_agence : string
        - statut_validation : boolean
        - bloque : boolean
        + validations()
        + abonnements()
        + signalements()
    }

    class Particulier {
        - id : bigint
        - user_id : bigint
        - profession : string
        + signalements()
    }

    class ValidationAgence {
        - id : bigint
        - agence_id : bigint
        - administrateur_id : bigint
        - statut : boolean
        - commentaire : text
        - date_validation : datetime
        + agence()
        + administrateur()
    }

    class Signalement {
        - id : bigint
        - particulier_id : bigint
        - agence_id : bigint
        - signalable_type : string
        - signalable_id : bigint
        - motif : string
        - description : text
        - statut : StatutSignalementEnum
        - date_signalement : datetime
        - date_traitement : datetime
        - commentaire_admin : text
        - sanction : string
        + particulier()
        + agence()
        + signalable()
    }

    class Abonnement {
        - id : bigint
        - agence_id : bigint
        - formule : FormuleAbonnementEnum
        - montant : decimal
        - date_debut : datetime
        - date_fin : datetime
        - statut : boolean
        - paydunya_status : string
        + agence()
        + estActif() : boolean
    }

    class Banniere {
        - id : bigint
        - titre : string
        - sous_titre : string
        - image : string
        - lien : string
        - ordre : integer
        - est_actif : boolean
        - date_debut : datetime
        - date_fin : datetime
        + scopeActifs()
    }
}

' --- Relations & Multiplicités ---

' Administration & Validation Agence
Administrateur "1" -- "0..*" ValidationAgence : effectue >
Agence "1" -- "0..*" ValidationAgence : fait l'objet de >

' Modération & Signalements
Particulier "0..1" -- "0..*" Signalement : dépose >
Agence "0..1" -- "0..*" Signalement : dépose >

' Abonnements des Agences
Agence "1" -- "0..*" Abonnement : souscrit >

@enduml
